--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.5",
     "@reduxjs/toolkit": "^2.2.7",
     "localforage": "^1.10.0",
@@ -20,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "sort-by": "^1.2.0"
   },
